--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pandas==0.19.1
 psycopg2==2.6.2
 pycrypto==2.6.1
 python-dateutil==2.6.0
+python-dotenv==0.6.1
 python-editor==1.0.3
 pytz==2016.10
 six==1.10.0
