--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-Login==0.4.0
 Flask-Migrate==2.0.2
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
+googlemaps==2.4.5
 gunicorn==19.6.0
 itsdangerous==0.24
 jdcal==1.3
@@ -21,6 +22,7 @@ python-dateutil==2.6.0
 python-dotenv==0.6.1
 python-editor==1.0.3
 pytz==2016.10
+requests==2.11.1
 six==1.10.0
 SQLAlchemy==1.1.4
 Werkzeug==0.11.11
