possibly fixed heroku user session issues based on http://stackoverflow.com/a/30408264

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 APP_SETTINGS=config.Config
 DATABASE_URL="postgresql://localhost/scouts"
 GOOGLE_MAPS_KEY="AIzaSyAAgOr4JTZFSBd2VDcPHrKta8p3sxCpslU"
+SECRET_KEY="S6BYRSgnTKLym7G07M0IYren74yeA0s3"
